// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TodoItem should match snapshot for completed todo 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 lioFhE"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dKnYnC sc-VHjGu jdxga-D"
    >
      <label
        class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 ibppuy"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 kkuNuI StyledCheckBox-sc-1dbk5ju-6 eaiPwo"
        >
          <input
            checked=""
            class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 kwqnhR"
            data-testid="todo-checkbox-1"
            type="checkbox"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 iRwvIO StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fQtXhU"
          >
            <svg
              class="StyledCheckBox__StyledCheckBoxIcon-sc-1dbk5ju-0 huNCKL"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 24 24"
            >
              <path
                d="M6,11.3 L10.3,16 L18,6.2"
                fill="none"
              />
            </svg>
          </div>
        </div>
      </label>
      <span
        class="StyledText-sc-1sadyjn-0 eZKRqX sc-gnOvAp eELmxq"
        data-testid="todo-text-1"
      >
        Test todo
      </span>
      <button
        class="StyledButton-sc-323bzc-0 kdwnZD"
        data-testid="todo-delete-1"
        type="button"
      >
        <svg
          aria-label="Trash"
          class="StyledIcon-sc-ofa7kd-0 jzlLJr"
          viewBox="0 0 24 24"
        >
          <path
            d="M4 5h16v18H4V5zM1 5h22M9 1h6v4H9V1zm0 0h6v4H9V1zm6 8v10M9 9v10"
            fill="none"
            stroke="#000"
            stroke-width="2"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`TodoItem should match snapshot for incomplete todo 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 lioFhE"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dKnYnC sc-VHjGu jdxga-D"
    >
      <label
        class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 ibppuy"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 kkuNuI StyledCheckBox-sc-1dbk5ju-6 eaiPwo"
        >
          <input
            class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 kwqnhR"
            data-testid="todo-checkbox-1"
            type="checkbox"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 dmVmJK StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fQtXhU"
          />
        </div>
      </label>
      <span
        class="StyledText-sc-1sadyjn-0 iugIKr sc-gnOvAp gvMwTs"
        data-testid="todo-text-1"
      >
        Test todo
      </span>
      <button
        class="StyledButton-sc-323bzc-0 kdwnZD"
        data-testid="todo-delete-1"
        type="button"
      >
        <svg
          aria-label="Trash"
          class="StyledIcon-sc-ofa7kd-0 jzlLJr"
          viewBox="0 0 24 24"
        >
          <path
            d="M4 5h16v18H4V5zM1 5h22M9 1h6v4H9V1zm0 0h6v4H9V1zm6 8v10M9 9v10"
            fill="none"
            stroke="#000"
            stroke-width="2"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
